works without MEthodHandles, but allocation still horrifying